# SudokuGame

./: CMakeLists.txt  README.md
SudokuGame/: #gui_interface.glade#  CMakeLists.txt  MiniProject Surya Faiz ppt.pptx  TableList.h  gui_interface.glade~  gui_test.c  headerlist.h  idea to store table elements.txt  main.c  main_about.glade  sudoku.h
SudokuGame/GUI Styling/: #main.glade#  gui_test.c  main_window.c  main_window.glade  main_window.glade~  welcome.glade  welcome.glade~
SudokuGame/glade-templates/: gui_interface.glade~  main_about.glade~
SudokuGame/headers/: TableList.h  headerlist.h  sudoku.h
SudokuGame/resources/glade-templates/: gui_interface.glade  gui_interface.glade~
